FIX: fix overlapping /misplacement of comic volume on series detail page, IMP: Add bongo publisher logo, FIX: flag CV being down if CV response fails during add series

--- a/data/interfaces/default/css/style.css
+++ b/data/interfaces/default/css/style.css
@@ -2366,7 +2366,7 @@ figure.item{
 }
 .watermark {
   position: absolute;
-  color: lightgray;
+  color: darkgray;
   opacity: 0.15;
   font-size: 1.5em;
   width: 100%;
